# DekkCore

./: AUTHORS  README.md  compile.sh
cmake/: showoptions.cmake
src/common/: Banner.cpp
src/server/bnetserver/: Main.cpp
src/server/database/Database/Implementation/: WorldDatabase.cpp
src/server/game/AI/ScriptedAI/: ScriptedCreature.cpp
src/server/game/Miscellaneous/: corecrt_math_defines.h
src/server/game/Server/Json/: reader.h
src/server/game/World/: World.cpp
src/server/scripts/DekkCore/Custom/: custom_spells.cpp
src/server/scripts/DekkCore/DarkmoonIsland/: DarkmoonIsland.cpp  DarkmoonTonk.cpp
src/server/scripts/DekkCore/Draenor/: zone_frostfire_ridge.cpp
src/server/scripts/DekkCore/EasternKingdoms/: zone_elwynn_forest.cpp  zone_eversong_woods.cpp  zone_tirisfal_glades.cpp
src/server/scripts/DekkCore/Legion/: zone_argus_krokuun.cpp  zone_azsuna.cpp  zone_dalaran_legion.cpp  zone_highmountain.cpp  zone_stormheim.cpp  zone_valsharah.cpp
src/server/scripts/DekkCore/Pandaria/: dread_wastes.cpp  zone_the_wandering_isle.cpp
src/server/scripts/DekkCore/Spells/: spell_druid.cpp  spell_shaman.cpp  spell_warlock.cpp
src/server/scripts/EasternKingdoms/Deadmines/: boss_admiral_ripsnarl.cpp  boss_captain_cookie.cpp  boss_foereaper5000.cpp  boss_glubtok.cpp  boss_vanessa_vancleef.cpp
src/server/scripts/EasternKingdoms/ScarletHalls/: boss_armsmaster_harlan.cpp  boss_flameweaver_koegler.cpp  boss_houndmaster_braun.cpp
src/server/scripts/EasternKingdoms/ShadowfangKeep/: boss_baron_ashbury.cpp  boss_baron_silverlaine.cpp  (+4 more)
src/server/scripts/Kalimdor/: zone_orgrimmar.cpp
src/tools/extractor_common/: CMakeLists.txt
(+113 files in other folders)
